# tenbox

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-rootfs.yml  pr-check.yml
installer/: TenBox.wxs  zh-CN.wxl
scripts/: .env.sample  build-macos.sh  build-msi.bat  make-dmg.sh  make-rootfs-base-arm64.sh  make-rootfs-base.sh  make-rootfs-openclaw.sh  mkcpio.py  release.py  requirements.txt
scripts/arm64/: build-virtio-snd.sh  get-kernel.sh  make-initramfs.sh  make-rootfs-base.sh  make-rootfs-copaw.sh  make-rootfs-hermes.sh  make-rootfs-openclaw.sh  make-rootfs.sh
scripts/arm64/extra-modules/: virtio_snd.ko
scripts/docker/: Dockerfile  build.sh
scripts/rootfs-configs/: Hermes.desktop  openclaw-readme.txt
scripts/rootfs-scripts/: virtio-gpu-resize.sh  virtiofs-automount  virtiofs-desktop-sync
scripts/rootfs-services/: 50-user-power.rules  serial-getty-ttyAMA0-autologin.conf
scripts/x86_64/: get-kernel.sh  make-initramfs.sh  make-rootfs-base.sh  make-rootfs-copaw.sh  make-rootfs-hermes.sh  make-rootfs-openclaw.sh
scripts/x86_64/extra-modules/: virtio_snd.ko
src/core/: CMakeLists.txt
src/core/arch/aarch64/: aarch64_machine.cpp  aarch64_machine.h  boot.cpp  boot.h  fdt_builder.cpp  fdt_builder.h  pl011.cpp  pl011.h
src/core/arch/x86_64/: boot.cpp  x86_machine.cpp  x86_machine.h
src/core/device/irq/: gicv3.cpp  gicv3.h  gicv3_regs.h  local_apic.cpp  local_apic.h
src/core/device/timer/: i8254_pit.cpp  i8254_pit.h
src/core/device/virtio/: qcow2.cpp  raw_image.cpp  virtio_fs.cpp  virtio_fs.h  virtio_mmio.cpp  virtio_mmio.h  virtqueue.cpp
src/core/disk/: qcow2.cpp  qcow2.h
src/core/guest_agent/: guest_agent_handler.cpp  guest_agent_handler.h
src/core/net/: frame_builder.h  lwipopts.h  net_backend.cpp  net_compat.h  net_dhcp.cpp  net_dns_relay.cpp  net_icmp.cpp  net_packet.h
src/core/net/arch/: cc.h
src/core/vmm/: address_space.cpp  address_space.h  hypervisor_vcpu.h  hypervisor_vm.h  machine_model.h  vm.cpp  vm.h  vm_platform.h
src/ipc/: CMakeLists.txt  ipc_transport.h  unix_socket.cpp  unix_socket.h
src/manager/: CMakeLists.txt  app_settings.cpp  app_settings.h  http_download.cpp  i18n.cpp  i18n.h  image_source.h  main.cpp  manager_service.cpp  manager_service.h  update_checker.cpp  update_checker.h
src/manager-macos/: Package.swift  TenBoxApp.swift
src/manager-macos/Audio/: CoreAudioPlayer.swift
src/manager-macos/Bridge/: IpcClientWrapper.swift  Models.swift  TenBox-Bridging-Header.h  TenBoxBridgeWrapper.swift
src/manager-macos/Bridge/Sources/: TenBoxBridge.mm  TenBoxIPC.mm
src/manager-macos/Bridge/Sources/core/vmm/: types.h
src/manager-macos/Bridge/Sources/ipc/: protocol_v1.cpp  protocol_v1.h  unix_socket.h
src/manager-macos/Bridge/include/: TenBoxBridge.h  TenBoxIPC.h
src/manager-macos/Clipboard/: ClipboardHandler.swift
src/manager-macos/Input/: InputHandler.swift
src/manager-macos/Resources/: Info.plist  Shaders.metal  TenBox.entitlements
src/manager-macos/Views/: ConsoleView.swift  ContentView.swift  CreateVmDialog.swift  DisplayView.swift  InfoView.swift  MetalDisplayView.swift  VmDetailView.swift  VmListView.swift
src/manager/ui/: console_tab.cpp  create_vm_dialog.cpp  dlg_builder.h  edit_vm_dialog.cpp  info_tab.cpp  port_forward_dialog.cpp  settings_dialog.cpp  shared_folders_dialog.cpp  update_dialog.cpp  vm_listview.cpp  win32_display_panel.cpp  win32_ui_shell.cpp
src/platform/: CMakeLists.txt
src/platform/macos/: vm_platform_macos.cpp
src/platform/macos/console/: posix_console_port.cpp  posix_console_port.h
src/platform/macos/hypervisor/: hvf_mmio_decode.cpp  hvf_platform.cpp  hvf_platform.h  hvf_vcpu.cpp  hvf_vcpu.h  hvf_vm.cpp  hvf_vm.h
src/platform/macos/hypervisor/aarch64/: hvf_mmio_decode.cpp  hvf_mmio_decode.h  hvf_vcpu.cpp  hvf_vcpu.h  hvf_vm.cpp  hvf_vm.h
src/platform/macos/hypervisor/x86_64/: hvf_vcpu.cpp  hvf_vcpu.h  hvf_vm.cpp  hvf_vm.h
src/platform/macos/ipc/: socket_transport.cpp  socket_transport.h
src/platform/windows/: vm_platform_win.cpp
src/platform/windows/ipc/: pipe_transport.cpp  pipe_transport.h
src/runtime/: CMakeLists.txt  main.cpp  runtime_service.cpp  runtime_service.h
src/ui/common/: i18n.cpp  i18n.h
src/ui/win32/: win32_dialogs.cpp  win32_dialogs.h  win32_ui_shell.cpp
tests/: CMakeLists.txt  test_qcow2.cpp
website/: vite.config.js
website/public/api/: appcast.xml  images.json  version.json
website/src/components/: FooterSection.vue  HeroSection.vue  NavBar.vue
website/src/i18n/: en-US.json  zh-CN.json
